src/app/home/home.component.scss
@import "mixins";
@import "responsive";

.content {
    width: 100%;
    display: flex;
    flex-direction: row;
    @include bottom-space;

    @include respond(medium) {
        flex-direction: column;
    }

    & .main {
        flex: 70%;
        padding: 2rem;

        @include respond(medium) {
            flex: 100%;
            padding: 0.5rem;
            margin: 0.5rem;
            box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);

        }

        & .events {
            display: grid;
            margin-top: 0.5rem;
            margin-bottom: 0.5rem;
            grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
            row-gap: 5rem;
            column-gap: 1rem;

            @include respond(small) {
                grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
            }

            & rs-carousel {
                width: 100%;
                max-width: 100%;
            }
        }
    }

    & .aside {
        @include aside-default;

        & .rider__cards {
            @include respond(medium) {
                display: grid;
                row-gap: 1rem;
                column-gap: 1rem;
                grid-template-columns: repeat(2, 1fr);
            }

            @include respond(small) {
                display: block;
                grid-template-columns: none;
            }

        }
    }
}

.map {
    padding: 2rem;
    @include bottom-space;

    h2 {
        margin-bottom: 0.5rem;
    }
}

